[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/player_meshes/bear.obj" type="ArrayMesh" id=2]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.207843, 0.113725, 0.0588235, 1 )

[sub_resource type="BoxShape" id=3]

[node name="Spatial" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.46631, 0, 0, 0, -2.70609e-08, 0.61908, 0, -0.46631, -2.0383e-08, 0, 0.446853, 0 )
shape = SubResource( 1 )
disabled = true

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
transform = Transform( -0.428402, 5.36337e-16, -4.9722e-08, -3.74521e-08, -2.024e-08, 0.568753, -1.63709e-15, 0.322686, 2.024e-08, 0, 5.06257e-08, -1.15818 )
mesh = ExtResource( 2 )
material/0 = SubResource( 4 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 0.233791, 0, 0, 0, 0.256415, 0, 0, 0, 0.330676, 0, 0.797781, -0.307737 )
visible = false

[node name="ThrowRight" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.780113, 1.43224, -0.0341725 )

[node name="PackageCarryPosition" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.447986, -0.94668 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.750925, 0 )
collision_layer = 16
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area" to="." method="_on_package_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_package_exited"]
